--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/prompt": "^4.5.0",
+    "axios": "^0.25.0",
+    "mongoose": "^6.1.7",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "17.0.10",
+    "@types/node": "^15.6.1",
     "@types/react": "17.0.38",
+    "@types/react-helmet": "^6.1.5",
+    "@types/styled-components": "^5.1.21",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "typescript": "4.5.5"
