--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fontsource/prompt": "^4.5.0",
     "axios": "^0.25.0",
+    "date-fns": "^2.28.0",
     "mongoose": "^6.1.7",
     "next": "12.0.8",
     "react": "17.0.2",
