--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fontsource/prompt": "^4.5.0",
     "axios": "^0.25.0",
     "date-fns": "^2.28.0",
+    "firebase": "^9.6.6",
     "mongoose": "^6.1.7",
     "next": "12.0.8",
     "react": "17.0.2",
