--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,16 @@
 {
   "hosting": {
     "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
-        "source": "**",
-        "destination": "/index.html"
+        "source": "**/**",
+        "function": "nextServer"
       }
     ]
+  },
+  "functions": {
+    "source": ".",
+    "runtime": "nodejs16"
   }
 }
