--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "k39",
+  "license": "MIT",
   "private": true,
-  "main": "function.js",
+  "main": "server.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,7 +17,7 @@
     "date-fns": "^2.28.0",
     "firebase": "^9.6.6",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0",
+    "firebase-functions": "^3.18.1",
     "mongoose": "^6.1.7",
     "next": "12.0.8",
     "react": "17.0.2",
@@ -25,11 +26,11 @@
   },
   "devDependencies": {
     "@types/node": "^15.6.1",
-    "@types/react": "17.0.38",
+    "@types/react": "^17.0.39",
     "@types/react-helmet": "^6.1.5",
-    "@types/styled-components": "^5.1.21",
+    "@types/styled-components": "^5.1.23",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
-    "typescript": "4.5.5"
+    "typescript": "^4.5.5"
   }
 }
