--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase-functions": "^3.18.1",
     "mongoose": "^6.1.7",
     "next": "12.0.8",
+    "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
