--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,27 +1,23 @@
 {
-  "name": "PWA App",
-  "short_name": "App",
+  "short_name": "k39",
+  "name": "k39-ranch",
+  "description": "...",
   "icons": [
     {
-      "src": "/icons/android-chrome-192x192.png",
-      "sizes": "192x192",
+      "src": "/icons/android-chrome-512x512.png",
       "type": "image/png",
-      "purpose": "any maskable"
+      "sizes": "192x192"
     },
     {
-      "src": "/icons/android-chrome-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "/icons/android-chrome-512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
-  "theme_color": "#FFFFFF",
-  "background_color": "#FFFFFF",
+  "shortcuts": [],
   "start_url": "/",
+  "background_color": "#FFFFFF",
   "display": "standalone",
-  "orientation": "portrait"
+  "scope": "/",
+  "theme_color": "#000000"
 }
