--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "main": "server.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "PORT=3000 next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "PORT=8081 next start",
     "lint": "next lint",
     "deploy": "yarn build && firebase deploy --only functions,hosting"
   },
