--- a/package.json
+++ b/package.json
@@ -30,8 +30,13 @@
     "@types/react": "^17.0.39",
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.23",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "eslint-config-prettier": "^8.4.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   }
 }
