--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "PORT=8081 next start",
     "lint": "next lint",
-    "deploy": "yarn build && firebase deploy --only functions,hosting"
+    "deploy": "yarn build && firebase deploy --only functions,hosting",
+    "prepare": "husky"
   },
   "dependencies": {
     "@fontsource/prompt": "^4.5.0",
